--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: black;
+    background-color: #ff6347;
     color: white;
     padding: 1rem;
     text-align: center;
